--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
 /* Header styling */
 h1 {
   font-size: 4rem;
-  color: #083464; /* Berkeley Blue */
+  color: rgb(0, 49, 98); /* Berkeley Blue */
   margin-top: 1rem;
 }
 
@@ -41,7 +41,7 @@ h1 {
 
 /* Additional styles for links or other elements */
 a {
-  color: #083464;
+  color: rgb(0, 49, 98);
   text-decoration: none;
 }
 
