--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ nav a {
   text-decoration: none;
   margin: 0 15px;
   font-size: 1.2rem;
+  position: relative;
 }
 
 nav a:hover {
@@ -55,6 +56,9 @@ nav a:hover {
   position: absolute;
   background-color: #0073e6;
   min-width: 160px;
+  left: 50%;
+  transform: translateX(-50%); /* Center the dropdown content */
+  text-align: center; /* Center the text within the dropdown */
   z-index: 1;
 }
 
@@ -73,8 +77,18 @@ nav a:hover {
   display: block;
 }
 
-nav a:hover, .dropdown:hover > a {
+.dropdown:hover > a {
   background-color: #005bb5;
+}
+
+/* Dropdown indicator */
+.dropdown a::after {
+  content: '\25BC'; /* Unicode character for downwards triangle */
+  font-size: 0.6rem;
+  margin-left: 5px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* Container styling */
