--- a/styles.css
+++ b/styles.css
@@ -93,8 +93,8 @@ nav a:hover {
 
 /* Banner styling */
 .banner {
-  background-color: #e0f7fa; /* Light blue color */
-  color: #0073e6; /* Berkeley Blue text */
+  background-color: #0c2457; /* Light blue color */
+  color: #ffffff; /* Berkeley Blue text */
   text-align: center;
   font-size: 1.6rem;
   padding: 15px;
