--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,6 @@ nav a:hover {
 /* Section styling */
 section {
   width: 100%;
-  margin: 0px;
 }
 
 /* Important dates styling */
@@ -145,6 +144,12 @@ section {
 .important-info {
   font-size: 1.6rem;
   margin-top: 10px;
+}
+
+.important-info-bold {
+  font-size: 1.6rem;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 footer {
