--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ section {
 .video-section {
   background-color: #9e9d9d; /* Light gray color */
   text-align: center;
+  padding: 30px;
   width: 100%;
 }
 
@@ -159,7 +160,6 @@ section {
 }
 
 footer {
-  margin-top: auto;
   padding: 10px;
   background-color: #0073e6; /* Berkeley Blue */
   color: white;
