--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,7 @@ footer {
 /* #endregion */
 
 /* #region: Responsive Styling */
+/* Responsive styling */
 @media (max-width: 1024px) {
   nav {
     display: flex;
@@ -475,6 +476,22 @@ footer {
 
   .photo {
     width: 80%;
+  }
+
+  .video-final-container {
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+  }
+
+  .video-final-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
