--- a/styles.css
+++ b/styles.css
@@ -483,7 +483,7 @@ footer {
     padding-bottom: 20%; /* 16:9 aspect ratio */
     height: 0;
     overflow: hidden;
-    max-width: 75%;
+    max-width: auto;
     background: #9e9d9d;
   }
 
@@ -491,8 +491,8 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
   }
 }
 
